# ttembed

./: .dockerignore  .editorconfig  Cargo.toml  Dockerfile
.github/workflows/: deployment.yaml
src/: main.rs
src/core/: bot.rs  mod.rs
src/core/downloader/: cmd_builder.rs  mod.rs  ytdl.rs
src/downloader/: downloader.rs  generic.rs  mod.rs  ttdl.rs  ytdl.rs
