[package]
authors = ["madetara x@madetara.dev"]
name = "ttembedder"
version = "0.1.1"
edition = "2021"
publish = false

[[bin]]
bench = false
name = "ttembedder"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lazy_static = "1.5"
openssl-probe = "0.1"
opentelemetry = "0.24"
opentelemetry-appender-tracing = "0.5.0"
opentelemetry-otlp = { version = "0.17", features = [
    "grpc-tonic",
    "tls",
    "tls-roots",
] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.5.0", features = ["trace"] }
teloxide = { version = "0.13.0", features = ["macros", "webhooks-axum"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-futures = "0.2"
tracing-opentelemetry = "0.25"
tracing-subscriber = "0.3"
tokio = { version = "1.39", features = [
    "rt-multi-thread",
    "macros",
    "process",
] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
url = "2.5"
uuid = "1.10"

[lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"
cargo = "allow"
